--- a/India's_PV__power__potential.ipynb
+++ b/India's_PV__power__potential.ipynb
@@ -97,7 +97,7 @@
         "Data analysis here can be divided into three sections:\n",
         "*  **Phase-1** : Obtaining suitable area with elevation data\n",
         "*  **Phase-2** : Technical SPV potential mapping with GHI data\n",
-        "*  **Phase-3** : Technical CSP potential mapping with DNI data"
+        "*  **Phase-3** : Technical CSP potential mapping with DNI data\n"
       ],
       "metadata": {
         "id": "e8UZxFEFJZeM"
